# EulerMatrice

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: __init__.py  graph.py  pyproject.toml
